--- a/onboarding/tutorial.ipynb
+++ b/onboarding/tutorial.ipynb
@@ -59,6 +59,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,7 +69,7 @@
     "them by first packaging them up into a portable flyte archive:\n",
     "\n",
     "```\n",
-    "export IMAGE='ghcr.io/flyteorg/flyte-conference-talks:pydata-global-2022-latest'\n",
+    "export IMAGE='ghcr.io/unionai-oss/union-cloud-templates:onboarding-latest'\n",
     "pyflyte --pkgs workflows package --image $IMAGE -f\n",
     "```\n",
     "\n",
@@ -76,7 +77,7 @@
     "tasks and workflows in this project. Then, you can register it with:\n",
     "\n",
     "```\n",
-    "flytectl register files --project flytesnacks --domain development --archive flyte-package.tgz --version v0\n",
+    "uctl register files --project flytesnacks --domain development --archive flyte-package.tgz --version v0\n",
     "```\n",
     "\n",
     "Now we can go over to https://sandbox.union.ai/console\n",
@@ -86,18 +87,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/fa72079b367b1469da6b'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from workflows import example_00_intro\n",
+    "from workflows.example_00_intro import Hyperparameters\n",
     "from workflows.utils import get_remote\n",
     "\n",
     "remote = get_remote()\n",
     "execution = remote.execute_local_workflow(\n",
     "    example_00_intro.training_workflow,\n",
     "    inputs={\n",
-    "        \"hyperparameters\": {\"C\": 0.1, \"max_iter\": 5000},\n",
+    "        \"hyperparameters\": Hyperparameters(C=0.1, max_iter=5000),\n",
     "        \"test_size\": 0.2,\n",
     "        \"random_state\": 11,\n",
     "    }\n",
@@ -107,21 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "execution = remote.wait(execution)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf = execution.outputs[\"o0\"]\n",
-    "clf"
    ]
   },
   {
@@ -140,9 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "activated scheduled_training_workflow\n"
+     ]
+    }
+   ],
    "source": [
     "from workflows.utils import get_remote\n",
     "\n",
@@ -191,15 +202,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deactivated scheduled_training_workflow\n"
+     ]
+    }
+   ],
    "source": [
     "remote.client.update_launch_plan(lp_id, \"INACTIVE\")\n",
     "print(\"deactivated scheduled_training_workflow\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -210,7 +230,7 @@
     "application and bypasses the need to re-build a docker image.\n",
     "\n",
     "```\n",
-    "pyflyte register --project flytesnacks --domain development --image $IMAGE workflows\n",
+    "pyflyte register --project onboarding --domain development --image $IMAGE workflows\n",
     "```\n",
     "\n",
     "Now go back the Flyte console and take a look at one of the workflows. You'll\n",
@@ -237,9 +257,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/f2a346a39608a44318cd'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from workflows import example_01_dynamic\n",
     "from workflows.utils import get_remote\n",
@@ -249,9 +280,10 @@
     "    example_01_dynamic.tuning_workflow,\n",
     "    inputs={\n",
     "        \"hyperparam_grid\": [\n",
-    "            {\"C\": 0.1, \"max_iter\": 5000},\n",
-    "            {\"C\": 0.01, \"max_iter\": 5000},\n",
-    "            {\"C\": 0.001, \"max_iter\": 5000},\n",
+    "            Hyperparameters(C=1.0, max_iter=5000),\n",
+    "            Hyperparameters(C=0.1, max_iter=5000),\n",
+    "            Hyperparameters(C=0.01, max_iter=5000),\n",
+    "            Hyperparameters(C=0.001, max_iter=5000),\n",
     "        ],\n",
     "    }\n",
     ")\n",
@@ -270,9 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/f2dbc595045d44d9e9dd\n"
+     ]
+    }
+   ],
    "source": [
     "from workflows import example_02_map_task\n",
     "from workflows.utils import get_remote\n",
@@ -282,14 +322,14 @@
     "    example_02_map_task.tuning_workflow,\n",
     "    inputs={\n",
     "        \"hyperparam_grid\": [\n",
-    "            {\"C\": 0.1},\n",
-    "            {\"C\": 0.01},\n",
-    "            {\"C\": 0.001},\n",
+    "            Hyperparameters(C=1.0, max_iter=1000),\n",
+    "            Hyperparameters(C=0.1, max_iter=1000),\n",
+    "            Hyperparameters(C=0.01, max_iter=1000),\n",
+    "            Hyperparameters(C=0.001, max_iter=1000),\n",
     "        ],\n",
     "    }\n",
     ")\n",
-    "print(remote.generate_console_url(execution))\n",
-    "execution = remote.wait(execution)"
+    "print(remote.generate_console_url(execution))"
    ]
   },
   {
@@ -305,9 +345,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/f7a26f98bff2a464f93e\n"
+     ]
+    }
+   ],
    "source": [
     "from workflows import example_03_plugins\n",
     "from workflows.utils import get_remote\n",
@@ -322,8 +370,7 @@
     "        ),\n",
     "    }\n",
     ")\n",
-    "print(remote.generate_console_url(execution))\n",
-    "execution = remote.wait(execution)"
+    "print(remote.generate_console_url(execution))"
    ]
   },
   {
@@ -385,9 +432,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/feff5bd5f3dcf46b29b1\n"
+     ]
+    }
+   ],
    "source": [
     "from workflows import example_05_pandera_types\n",
     "from workflows.utils import get_remote\n",
@@ -395,10 +450,9 @@
     "remote = get_remote()\n",
     "execution = remote.execute_local_workflow(\n",
     "    example_05_pandera_types.get_splits,\n",
-    "    inputs={\"test_size\": 0.2}\n",
+    "    inputs={\"test_size\": 0.2},\n",
     ")\n",
-    "print(remote.generate_console_url(execution))\n",
-    "execution = remote.wait(execution)"
+    "print(remote.generate_console_url(execution))"
    ]
   },
   {
@@ -433,6 +487,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution 0: https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/f53efdc7e38a94d34ac6\n",
+      "Execution 1: https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/fdbc07b6a1eda4729bd9\n",
+      "Execution 2: https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/fd705dcdccbf0401695c\n"
+     ]
+    }
+   ],
+   "source": [
+    "from workflows import example_06_reproducibility\n",
+    "from workflows.utils import get_remote\n",
+    "\n",
+    "remote = get_remote()\n",
+    "\n",
+    "for i in range(3):\n",
+    "    execution = remote.execute_local_workflow(\n",
+    "        example_06_reproducibility.training_workflow,\n",
+    "        inputs={\n",
+    "            \"hyperparameters\": example_06_reproducibility.Hyperparameters(\n",
+    "                penalty=\"l2\", alpha=0.001, random_state=42,\n",
+    "            )\n",
+    "        },\n",
+    "    )\n",
+    "    print(f\"Execution {i}: {remote.generate_console_url(execution)}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -451,26 +538,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/f526f54c3946f406faae\n"
+     ]
+    }
+   ],
    "source": [
     "from workflows import example_07_caching\n",
     "from workflows.example_06_reproducibility import Hyperparameters\n",
     "from workflows.utils import get_remote\n",
     "\n",
     "remote = get_remote()\n",
+    "hyperparam_grid = [\n",
+    "    Hyperparameters(alpha=alpha)\n",
+    "    for alpha in [10.0, 1.0, 0.1, 0.01, 0.001, 0.0001]\n",
+    "]\n",
     "execution = remote.execute_local_workflow(\n",
     "    example_07_caching.tuning_workflow,\n",
-    "    inputs={\n",
-    "        \"hyperparam_grid\": [\n",
-    "            Hyperparameters(alpha=alpha)\n",
-    "            for alpha in [10.0, 1.0, 0.1, 0.01, 0.001, 0.0001]\n",
-    "        ],\n",
-    "    }\n",
+    "    inputs={\"hyperparam_grid\": hyperparam_grid}\n",
     ")\n",
-    "print(remote.generate_console_url(execution))\n",
-    "execution = remote.wait(execution)"
+    "print(remote.generate_console_url(execution))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the execution is completed, re-run the workflow with the same inputs in the\n",
+    "cell below. In the Union Cloud console you'll see a **checkmark icon 🔄** next to\n",
+    "the task execution status, indicating that the output of the execution was\n",
+    "taken from the cache."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/fe45987e8701d4e83879\n"
+     ]
+    }
+   ],
+   "source": [
+    "execution = remote.execute_local_workflow(\n",
+    "    example_07_caching.tuning_workflow,\n",
+    "    inputs={\"hyperparam_grid\": hyperparam_grid}\n",
+    ")\n",
+    "print(remote.generate_console_url(execution))"
    ]
   },
   {
@@ -485,9 +610,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/fd05d3e2f64754301a86\n"
+     ]
+    }
+   ],
    "source": [
     "from workflows import example_08_recover_executions\n",
     "from workflows.utils import get_remote\n",
@@ -497,8 +630,7 @@
     "    example_08_recover_executions.tuning_workflow,\n",
     "    inputs={\"alpha_grid\": [100.0, 10.0, 1.0, 0.1, 0.01, 0.001, 0.0001, 0.00001]}\n",
     ")\n",
-    "print(remote.generate_console_url(execution))\n",
-    "execution = remote.wait(execution)"
+    "print(remote.generate_console_url(execution))"
    ]
   },
   {
@@ -514,9 +646,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/f4399c6a5afea4e428b5\n"
+     ]
+    }
+   ],
    "source": [
     "from workflows import example_09_checkpointing\n",
     "from workflows.example_06_reproducibility import Hyperparameters\n",
@@ -554,29 +694,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/f9bc2d39e61954e5982e\n"
+     ]
+    }
+   ],
    "source": [
     "from workflows import example_10_flyte_decks\n",
-    "from workflows.utils import download_deck, get_remote\n",
     "\n",
     "remote = get_remote()\n",
     "execution = remote.execute_local_workflow(\n",
     "    example_10_flyte_decks.penguins_data_workflow,\n",
     "    inputs={},\n",
     ")\n",
-    "print(remote.generate_console_url(execution))\n",
-    "execution = remote.wait(execution)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_deck(remote, execution, \"n0\", \"decks/example_10_decks.html\")"
+    "print(remote.generate_console_url(execution))"
    ]
   },
   {
@@ -596,13 +733,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/f719d91678fe14f26a3f\n"
+     ]
+    }
+   ],
    "source": [
     "from workflows import example_11_extend_flyte_decks\n",
     "from workflows.example_06_reproducibility import Hyperparameters\n",
-    "from workflows.utils import download_deck, get_remote\n",
     "\n",
     "remote = get_remote()\n",
     "execution = remote.execute_local_workflow(\n",
@@ -613,24 +757,13 @@
     "        )\n",
     "    },\n",
     ")\n",
-    "print(remote.generate_console_url(execution))\n",
-    "execution = remote.wait(execution)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_deck(remote, execution, \"n2\", \"decks/example_11_decks_n2.html\")\n",
-    "download_deck(remote, execution, \"n2\", \"decks/example_11_decks_n3.html\")"
+    "print(remote.generate_console_url(execution))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ucloud-onboarding",
    "language": "python",
    "name": "python3"
   },
@@ -644,11 +777,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0 (main, Oct 25 2022, 14:11:21) [Clang 12.0.0 (clang-1200.0.32.29)]"
+   "version": "3.9.1"
   },
   "vscode": {
    "interpreter": {
-    "hash": "1a1af0ee75eeea9e2e1ee996c87e7a2b11a0bebd85af04bb136d915cefc0abce"
+    "hash": "d2fe4107dcc8bcb38d72bc882c163cab818c484f1874eaaf3d8bb8bec93b2603"
    }
   }
  },
