add unit and end to end tests
Signed-off-by: Niels Bantilan <niels.bantilan@gmail.com>

--- a/onboarding/tutorial.ipynb
+++ b/onboarding/tutorial.ipynb
@@ -388,6 +388,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -408,7 +409,41 @@
     "pyflyte register --project flytesnacks --domain development --image $IMAGE workflows\n",
     "```\n",
     "\n",
-    "What error do you see?"
+    "What error do you see?\n",
+    "\n",
+    "Then you can revert it to the correct implementation and run it again:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Jan/2023 12:01:00] \"GET /callback?code=dGZn47C1q3b1iPXTizhNpdjt6Ets5Xiny7ffakyp1KM&state=l3nnrLfu5KrB8T6ZxyDxmb4evuzfa1hhSlnZwDWHDXpEiUXg7diySw HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/f01fd915b09df4800b72\n"
+     ]
+    }
+   ],
+   "source": [
+    "from workflows import example_04_type_system\n",
+    "from workflows.utils import get_remote\n",
+    "\n",
+    "remote = get_remote()\n",
+    "execution = remote.execute_local_workflow(\n",
+    "    example_04_type_system.get_splits,\n",
+    "    inputs={\"test_size\": 0.2, \"random_state\": 123},\n",
+    ")\n",
+    "print(remote.generate_console_url(execution))"
    ]
   },
   {
