update notebook and utils
Signed-off-by: Niels Bantilan <niels.bantilan@gmail.com>

--- a/onboarding/tutorial.ipynb
+++ b/onboarding/tutorial.ipynb
@@ -87,20 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/fa72079b367b1469da6b'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from workflows import example_00_intro\n",
     "from workflows.example_00_intro import Hyperparameters\n",
@@ -302,19 +291,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://playground.canary.unionai.cloud/console/projects/onboarding/domains/development/executions/f2dbc595045d44d9e9dd\n"
+      "https://wpna-iad.hosted.unionai.cloud/console/projects/onboarding/domains/development/executions/fff1b4575f2db485c8d4\n"
      ]
     }
    ],
    "source": [
     "from workflows import example_02_map_task\n",
+    "from workflows.example_00_intro import Hyperparameters\n",
     "from workflows.utils import get_remote\n",
     "\n",
     "remote = get_remote()\n",
