update deploy action, install flytekit
Signed-off-by: Niels Bantilan <niels.bantilan@gmail.com>

--- a/onboarding/tutorial.ipynb
+++ b/onboarding/tutorial.ipynb
@@ -167,11 +167,8 @@
     "model = None\n",
     "if recent_executions:\n",
     "    scheduled_execution = recent_executions[0]\n",
-    "    scheduled_execution = remote.wait(scheduled_execution)\n",
-    "    model = scheduled_execution.outputs[\"o0\"]\n",
-    "    model\n",
-    "\n",
-    "print(model)"
+    "    \n",
+    "print(scheduled_execution)"
    ]
   },
   {
