update app.yaml, readme, notebook for minor bugs
Signed-off-by: Niels Bantilan <niels.bantilan@gmail.com>

--- a/onboarding/tutorial.ipynb
+++ b/onboarding/tutorial.ipynb
@@ -45,6 +45,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -53,9 +54,37 @@
     "Workflows are basically a domain-specific language (DSL) that builds an\n",
     "execution graph that uses tasks as the building blocks for more complex pipelines.\n",
     "\n",
-    "Insert a debugging breakpoint `import pdb; pdb.set_trace()` on line 80 of the\n",
-    "`example_00_intro.py` script and rerun it. Take a look at all the variables\n",
-    "in the `training_workflow` like `data` and `model`. What data type are they?"
+    "Insert a debugging breakpoint `import pdb; pdb.set_trace()` right before the\n",
+    "return statement of the `training_workflow` function in the `example_00_intro.py`\n",
+    "script and rerun it. Take a look at all the variables in the `training_workflow`\n",
+    "like `data` and `model`. What data type is it?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Running a Workflow\n",
+    "\n",
+    "Use `pyflyte run` to run the workflow on a Python runtime:\n",
+    "\n",
+    "```bash\n",
+    "pyflyte run workflows/example_00_intro.py training_workflow \\\n",
+    "    --hyperparameters '{\"C\": 0.01, \"max_iter\": 5000}'\n",
+    "```\n",
+    "\n",
+    "Then supply the `--config`, `--remote`, and `--image` flags to run it on a\n",
+    "remote Flyte cluster:\n",
+    "\n",
+    "```bash\n",
+    "export IMAGE='ghcr.io/unionai-oss/union-cloud-templates:onboarding-latest'\n",
+    "pyflyte --config ~/.uctl/config.yaml \\\n",
+    "    run --remote \\\n",
+    "    --image $IMAGE \\\n",
+    "    workflows/example_00_intro.py training_workflow \\\n",
+    "    --hyperparameters '{\"C\": 0.01, \"max_iter\": 5000}'\n",
+    "```"
    ]
   },
   {
@@ -68,16 +97,15 @@
     "Once you're happy with the state of your tasks and workflows, you can register\n",
     "them by first packaging them up into a portable flyte archive:\n",
     "\n",
-    "```\n",
-    "export IMAGE='ghcr.io/unionai-oss/union-cloud-templates:onboarding-latest'\n",
+    "```bash\n",
     "pyflyte --pkgs workflows package --image $IMAGE -f\n",
     "```\n",
     "\n",
     "This will create a `flyte-package.tgz` archive file that contains the serialized\n",
     "tasks and workflows in this project. Then, you can register it with:\n",
     "\n",
-    "```\n",
-    "uctl register files --project flytesnacks --domain development --archive flyte-package.tgz --version v0\n",
+    "```bash\n",
+    "~/bin/uctl --config ~/.uctl/config.yaml register files --project flytesnacks --domain development --archive flyte-package.tgz --version v0\n",
     "```\n",
     "\n",
     "Now we can go over to https://sandbox.union.ai/console\n",
@@ -675,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.1 (default, Dec 11 2020, 06:28:49) \n[Clang 10.0.0 ]"
   },
   "vscode": {
    "interpreter": {
